# term

./: .gitignore  README  narradar-term.cabal  term.cabal  test.hs
Control/Monad/: Env.hs  Variant.hs
Data/: Bifunctor.hs  IOStableRef.hs  Term.hs
Data/Id/: Family.hs
Data/Rule/: Family.hs
Data/Term/: Annotated.hs  Automata.hs  Base.hs  Family.hs  IOVar.hs  Narrowing.hs  Ppr.hs  Rewriting.hs  Rules.hs  Simple.hs  Substitutions.hs  Utils.hs  Var.hs  Variables.hs
Data/Term/Annotated/: Narrowing.hs  Rewriting.hs  Rules.hs
Data/Var/: Family.hs
