name: narradar-term
version: 0.3.1
Cabal-Version:  >= 1.2.3
build-type: Simple
license: PublicDomain
author: Pepe Iborra
maintainer: pepeiborra@gmail.com
homepage: http://github.com/pepeiborra/term
description: terms, matching, unification, rewriting and narrowing 
synopsis: Term Rewriting Systems
category: Data
stability: experimental

Flag transformers
   default: False

Flag logict
   default: True

Library
  buildable: True
  build-depends: base > 4, containers, mtl > 2, prettyclass, control-monad-free > 0.5, bifunctors, applicative-extras

  if flag(logict)
     build-depends: logict
     cpp-options: -DLOGICT
  
  extensions:  UndecidableInstances, OverlappingInstances, ScopedTypeVariables,
               MultiParamTypeClasses, FunctionalDependencies,
               FlexibleInstances, TypeSynonymInstances,
               GeneralizedNewtypeDeriving

  exposed-modules:
    Control.Monad.Env
    Control.Monad.Variant
    Data.Term,
    Data.Term.Base,
    Data.Id.Family,
    Data.Term.Family,
    Data.Var.Family,
    Data.Rule.Family,
    Data.Term.Substitutions,
    Data.Term.Rules,
    Data.Term.Simple,
    Data.Term.Var,
    Data.Term.IOVar,
    Data.Term.Rewriting,
    Data.Term.Narrowing,
    Data.Term.Ppr
--    Data.Term.Annotated,
--    Data.Term.Annotated.Ppr,
--    Data.Term.Annotated.Rules,
--    Data.Term.Annotated.Rewriting,
--    Data.Term.Annotated.Narrowing,


  other-modules:
    Data.Term.Utils,
    Data.IOStableRef

  ghc-options: -Wall -fno-warn-name-shadowing
  ghc-prof-options: -auto