name: term
version: 0.1
Cabal-Version:  >= 1.2.3
build-type: Simple
license: PublicDomain
author: Pepe Iborra
maintainer: pepeiborra@gmail.com
homepage: http://github.com/pepeiborra/term
description: terms, matching, unification, rewriting and narrowing 
synopsis: Term Rewriting Systems
category: Data
stability: experimental

Flag transformers
   default: False

Library
  buildable: True
  build-depends: base, containers, control-monad-free
  if flag(transformers)
     build-depends: transformers
     cpp-options: -DTRANSFORMERS
  else
     build-depends: mtl
  extensions:  UndecidableInstances, OverlappingInstances, ScopedTypeVariables,
               MultiParamTypeClasses, FunctionalDependencies,
               FlexibleInstances, TypeSynonymInstances,
               GeneralizedNewtypeDeriving

  exposed-modules: 
    Data.Term,
    Data.Term.Rules,
    Data.Term.Simple,
    Data.Term.Var,
    Data.Term.IOVar

  other-modules:
    Data.IOStableRef

  ghc-options: -Wall -fno-warn-name-shadowing